fix SYCLDemo build error when SYCL is not enabled

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -69,7 +69,9 @@ open3d_add_example(ViewDistances)
 open3d_add_example(ViewPCDMatch)
 open3d_add_example(Visualizer)
 open3d_add_example(Voxelization)
-open3d_add_example(SYCLDemo)
+if(BUILD_SYCL_MODULE)
+    open3d_add_example(SYCLDemo)
+endif()
 
 if (BUILD_GUI)
     open3d_add_example(Draw)
