Remove open3d build step

--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -141,9 +141,9 @@ RUN mkdir build \
     -DCMAKE_INSTALL_PREFIX=~/open3d_install \
     -DDEVELOPER_BUILD=${DEVELOPER_BUILD} \
     .. \
- && make -j$(nproc) \
- && make install-pip-package -j$(nproc) \
- && make install -j$(nproc) \
+#  && make -j$(nproc) \
+#  && make install-pip-package -j$(nproc) \
+#  && make install -j$(nproc) \
  && pyenv rehash
 RUN cp build/lib/python_package/pip_package/*.whl /
 
