--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -123,35 +123,35 @@ WORKDIR /root/Open3D
 
 # Build Python wheel
 RUN pyenv install $(pyenv install --list | sort -r --version-sort | grep -m1 "^ *${PYTHON_VERSION}\.")
-RUN pyenv local $(pyenv versions | grep ${PYTHON_VERSION})
-RUN which python \
- && python --version \
- && python -m pip install -U \
-    pip=="21.1.1" \
-    wheel=="0.35.1" \
-    setuptools=="50.3.2" \
-    yapf=="0.30.0" \
-    pytest=="6.0.1"
+# RUN pyenv local $(pyenv versions | grep ${PYTHON_VERSION})
+# RUN which python \
+#  && python --version \
+#  && python -m pip install -U \
+#     pip=="21.1.1" \
+#     wheel=="0.35.1" \
+#     setuptools=="50.3.2" \
+#     yapf=="0.30.0" \
+#     pytest=="6.0.1"
 
-RUN mkdir build \
- && cd build \
- && cmake \
-    -DBUILD_UNIT_TESTS=ON \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=~/open3d_install \
-    -DDEVELOPER_BUILD=${DEVELOPER_BUILD} \
-    .. \
+# RUN mkdir build \
+#  && cd build \
+#  && cmake \
+#     -DBUILD_UNIT_TESTS=ON \
+#     -DCMAKE_BUILD_TYPE=Release \
+#     -DCMAKE_INSTALL_PREFIX=~/open3d_install \
+#     -DDEVELOPER_BUILD=${DEVELOPER_BUILD} \
+#     .. \
 #  && make -j$(nproc) \
 #  && make install-pip-package -j$(nproc) \
 #  && make install -j$(nproc) \
- && pyenv rehash
-RUN cp build/lib/python_package/pip_package/*.whl /
+#  && pyenv rehash
+# RUN cp build/lib/python_package/pip_package/*.whl /
 
 # Compress ccache folder, move to / directory (optional)
-RUN ccache -s \
- && CCACHE_DIR=$(ccache -p | grep "cache_dir =" | grep -oE "[^ ]+$") \
- && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
- && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
- && cd ${CCACHE_DIR_PARENT} \
- && tar -czf ${CCACHE_TAR_NAME}.tar.gz ${CCACHE_DIR_NAME} \
- && mv ${CCACHE_TAR_NAME}.tar.gz /
+# RUN ccache -s \
+#  && CCACHE_DIR=$(ccache -p | grep "cache_dir =" | grep -oE "[^ ]+$") \
+#  && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
+#  && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
+#  && cd ${CCACHE_DIR_PARENT} \
+#  && tar -czf ${CCACHE_TAR_NAME}.tar.gz ${CCACHE_DIR_NAME} \
+#  && mv ${CCACHE_TAR_NAME}.tar.gz /
