Separate configure and build commands

--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -140,8 +140,8 @@ RUN mkdir build \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=~/open3d_install \
     -DDEVELOPER_BUILD=${DEVELOPER_BUILD} \
-    .. \
- && make -j$(nproc)
+    ..
+RUN make -j$(nproc)
 #  && make install-pip-package -j$(nproc) \
 #  && make install -j$(nproc) \
 #  && pyenv rehash
