--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -140,20 +140,20 @@ RUN mkdir build \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=~/open3d_install \
     -DDEVELOPER_BUILD=${DEVELOPER_BUILD} \
-    ..
-RUN echo "$PWD" \ 
- && cd build \
- && make -j$(nproc)
-#  && make install-pip-package -j$(nproc) \
-#  && make install -j$(nproc) \
-#  && pyenv rehash
-# RUN cp build/lib/python_package/pip_package/*.whl /
+    .. \
+# RUN echo "$PWD" \ 
+#  && cd build \
+ && make -j$(nproc) \
+ && make install-pip-package -j$(nproc) \
+ && make install -j$(nproc) \
+ && pyenv rehash
+RUN cp build/lib/python_package/pip_package/*.whl /
 
 # Compress ccache folder, move to / directory (optional)
-# RUN ccache -s \
-#  && CCACHE_DIR=$(ccache -p | grep "cache_dir =" | grep -oE "[^ ]+$") \
-#  && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
-#  && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
-#  && cd ${CCACHE_DIR_PARENT} \
-#  && tar -czf ${CCACHE_TAR_NAME}.tar.gz ${CCACHE_DIR_NAME} \
-#  && mv ${CCACHE_TAR_NAME}.tar.gz /
+RUN ccache -s \
+ && CCACHE_DIR=$(ccache -p | grep "cache_dir =" | grep -oE "[^ ]+$") \
+ && CCACHE_DIR_NAME=$(basename ${CCACHE_DIR}) \
+ && CCACHE_DIR_PARENT=$(dirname ${CCACHE_DIR}) \
+ && cd ${CCACHE_DIR_PARENT} \
+ && tar -czf ${CCACHE_TAR_NAME}.tar.gz ${CCACHE_DIR_NAME} \
+ && mv ${CCACHE_TAR_NAME}.tar.gz /
