Tensor index /slice access is slow due to dynamic memory allocation.
expt: Writing 100K points to file (300K accesses)

### Original index access

```
python -c "import open3d as o3d; import numpy as np; pcd=o3d.t.geometry.PointCloud(np.zeros((100000,3))); pcd.point['intensities']=np.ones((100000,1)); o3d.t.io.write_point_cloud('test.xyzi', pcd)"

[Open3D WARNING] Writing took 0.546668s
```

### With pointers (8% time)

```
python -c "import open3d as o3d; import numpy as np; pcd=o3d.t.geometry.PointCloud(np.zeros((100000,3))); pcd.point['intensities']=np.ones((100000,1)); o3d.t.io.write_point_cloud('test.xyzi', pcd)"

[Open3D WARNING] Writing took 0.0470296s
```

### llvm SmallVector (static allocation) (56% time)

```
python -c "import open3d as o3d; import numpy as np; pcd=o3d.t.geometry.PointCloud(np.zeros((100000,3))); pcd.point['intensities']=np.ones((100000,1)); o3d.t.io.write_point_cloud('test.xyzi', pcd)"
[Open3D WARNING] Writing took 0.306094s
```

--- a/cpp/open3d/core/CMakeLists.txt
+++ b/cpp/open3d/core/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(core PRIVATE
     MemoryManagerStatistic.cpp
     ShapeUtil.cpp
     SizeVector.cpp
+    SmallVector.cpp
     SYCLUtils.cpp
     Tensor.cpp
     TensorCheck.cpp
