--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -112,8 +112,8 @@ jobs:
               --machine-type=n1-standard-8 \
               --boot-disk-size="128GB" \
               --boot-disk-type="pd-ssd" \
-              --image-project="ubuntu-os-cloud" \ 
-              --image-family=ubuntu-2004-lts \
+              --image-project="debian-cloud" \ 
+              --image-family="debian-10" \
               --metadata-from-file=startup-script=./util/gcloud_auto_clean.sh \
               --scopes="storage-full,compute-rw" \
               --service-account="$GCE_GPU_CI_SA"; do
