--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -141,6 +141,21 @@ jobs:
             --zone "${GCE_ZONE}" \
             --command "sudo apt-get update \
                     && sudo apt-get --yes install qemu binfmt-support qemu-user-static"
+      - name: VM install docker
+        run: |
+          gcloud compute ssh "${INSTANCE_NAME}" \
+            --zone="${GCE_ZONE}" \
+            --command="sudo apt update \
+                    && sudo apt-get remove docker docker-engine docker.io \
+                    && sudo apt install docker.io \
+                    && docker --version \
+                    && sudo systemctl start docker \
+                    && sudo systemctl enable docker \
+                    && sudo systemctl status docker \
+                    && sudo groupadd docker \
+                    && sudo usermod -aG docker $USER \
+                    && su - $USER \
+                    && id -nG"
       - name: VM build docker
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
