--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -151,7 +151,7 @@ jobs:
                     && sudo systemctl start docker \
                     && sudo systemctl enable docker \
                     && sudo systemctl status docker \
-                    && docker images"
+                    && sudo docker images"
       # && sudo groupadd docker \
       # && sudo usermod -aG docker $USER \
       # && su - $USER \
