Install docker using convenience script

--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -146,12 +146,20 @@ jobs:
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
             --command="sudo apt update \
-                    && sudo apt install -y docker.io \
-                    && docker --version \
-                    && sudo systemctl start docker \
-                    && sudo systemctl enable docker \
-                    && sudo systemctl status docker \
-                    && sudo docker images"
+                    && curl -fsSL https://get.docker.com -o get-docker.sh \
+                    && sudo sh get-docker.sh"
+      # && sudo apt-get install \
+      #     ca-certificates \
+      #     curl \
+      #     gnupg \
+      #     lsb-release \
+      # && sudo mkdir -p /etc/apt/keyrings \
+      # && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+      # && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null \
+      # && sudo apt-get update
+      # && sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin \
+      # && sudo docker run hello-world'
+      
       # && sudo groupadd docker \
       # && sudo usermod -aG docker $USER \
       # && su - $USER \
