--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -167,7 +167,9 @@ jobs:
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
-            --command="sudo Open3D/docker/docker_build.sh ${CI_CONFIG}"
+            --command="sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes \
+                    && sudo docker run --rm arm64v8/ubuntu:18.04 uname -p \
+                    && sudo Open3D/docker/docker_build.sh ${CI_CONFIG}"
       - name: VM ccache upload
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
