--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -17,33 +17,33 @@ env:
   GCE_CLI_GHA_VERSION: '302.0.0'      # Fixed to avoid dependency on API changes
 
 jobs:
-  # openblas-amd64:
-  #   runs-on: ubuntu-20.04
-  #   strategy:
-  #     fail-fast: false
-  #   steps:
-  #     - name: Checkout source code
-  #       uses: actions/checkout@v2
-  #     - name: Maximize build space
-  #       run: |
-  #         source util/ci_utils.sh
-  #         maximize_ubuntu_github_actions_build_space
-  #     - name: Docker build
-  #       run: |
-  #         docker/docker_build.sh openblas-amd64-py36-dev
-  #     - name: GCloud CLI setup
-  #       uses: google-github-actions/setup-gcloud@v0.2.1
-  #       with:
-  #         version: ${{ env.GCE_CLI_GHA_VERSION }}
-  #         service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
-  #         project_id: ${{ secrets.GCE_DOCS_PROJECT }}
-  #         export_default_credentials: true
-  #     - name: Upload ccache to GCS
-  #       run: |
-  #         gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-amd64.tar.gz gs://open3d-ci-cache/ || true
-  #     - name: Docker test
-  #       run: |
-  #         docker/docker_test.sh openblas-amd64-py36-dev
+  openblas-amd64:
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
+      - name: Maximize build space
+        run: |
+          source util/ci_utils.sh
+          maximize_ubuntu_github_actions_build_space
+      - name: Docker build
+        run: |
+          docker/docker_build.sh openblas-amd64-py36-dev
+      - name: GCloud CLI setup
+        uses: google-github-actions/setup-gcloud@v0.2.1
+        with:
+          version: ${{ env.GCE_CLI_GHA_VERSION }}
+          service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
+          project_id: ${{ secrets.GCE_DOCS_PROJECT }}
+          export_default_credentials: true
+      - name: Upload ccache to GCS
+        run: |
+          gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-amd64.tar.gz gs://open3d-ci-cache/ || true
+      - name: Docker test
+        run: |
+          docker/docker_test.sh openblas-amd64-py36-dev
 
   # How to resolve GitHub Actions ARM64 build timeout.
   #
@@ -146,22 +146,6 @@ jobs:
             --command="sudo apt update \
                     && curl -fsSL https://get.docker.com -o get-docker.sh \
                     && sudo sh get-docker.sh"
-      # && sudo apt-get install \
-      #     ca-certificates \
-      #     curl \
-      #     gnupg \
-      #     lsb-release \
-      # && sudo mkdir -p /etc/apt/keyrings \
-      # && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
-      # && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null \
-      # && sudo apt-get update
-      # && sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin \
-      # && sudo docker run hello-world'
-      
-      # && sudo groupadd docker \
-      # && sudo usermod -aG docker $USER \
-      # && su - $USER \
-      # && id -nG"
       - name: VM build docker
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
@@ -187,17 +171,3 @@ jobs:
           gcloud compute instances delete "${INSTANCE_NAME}" --zone "${GCE_ZONE}"
           ls -alh "${HOME}/.ssh"
           gcloud compute os-login ssh-keys remove --key-file "${HOME}/.ssh/google_compute_engine.pub"
-  
-      # - name: GCloud CLI setup
-      #   uses: google-github-actions/setup-gcloud@v0.2.1
-      #   with:
-      #     version: ${{ env.GCE_CLI_GHA_VERSION }}
-      #     service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
-      #     project_id: ${{ secrets.GCE_DOCS_PROJECT }}
-      #     export_default_credentials: true
-      # - name: Upload ccache to GCS
-      #   run: |
-      #     gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-arm64.tar.gz gs://open3d-ci-cache/ || true
-      # - name: Docker test
-      #   run: |
-      #     docker/docker_test.sh openblas-arm64-py36-dev
