--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -60,7 +60,7 @@ open3d_add_example(SLACIntegrate)
 open3d_add_example(TIntegrateRGBD)
 open3d_add_example(TOdometryRGBD)
 open3d_add_example(TriangleMesh)
-open3d_add_example(LegacyReconstruction Open3D::3rdparty_jsoncpp)
+open3d_add_example(LegacyReconstruction Open3D::3rdparty_jsoncpp Open3D::3rdparty_openmp)
 if (TARGET Open3D::3rdparty_openmp)
     open3d_add_example(TrimMeshBasedOnPointCloud Open3D::3rdparty_openmp)
 else()
