Update changes to t_reconstruction offline system (#5218)
* add Exceptions, cleanups, remove main from t_recon/rgbd_odom.py

* updated rgbd_odometry.py

* moved more params to default_config, fix typo, minor changes

* make order consistent

* add option for changing output path

* minor changes

--- a/examples/python/t_reconstruction_system/default_config.yml
+++ b/examples/python/t_reconstruction_system/default_config.yml
@@ -1,29 +1,53 @@
 name: Default reconstruction system config
-fragment_size: 100
+
+# General parameters.
 device: CUDA:0
 engine: tensor
 multiprocessing: false
+debug_mode: false
+
+# Path to input data.
 path_dataset: ''
+ # Relative to 'path_dataset'.
 depth_folder: depth
 color_folder: color
 path_intrinsic: ''
 path_color_intrinsic: ''
-fragment_size: 100
+
+# Path to output directory. Default: path_dataset/t_reconstruction/output/`
+path_output: ''
+# Relative to path_output.
+path_voxel_block_grid: 'voxel_block_grid.npz'
+path_mesh: 'reconstructed_mesh.ply'
+path_trajectory: 'camera_trajectory.log'
+
+# RGB-D input related parameters.
 depth_min: 0.1
 depth_max: 3.0
 depth_scale: 1000.0
+
+# RGB-D registation related parameters.
+fragment_size: 100
 odometry_method: hybrid
+# TODO: Add 'odometry_scales' option
+odometry_distance_thr: 0.07
 odometry_loop_interval: 10
 odometry_loop_weight: 0.1
-odometry_distance_thr: 0.07
+
+# Point-cloud fragments registration related parameters.
 icp_method: colored
+# TODO: Add 'icp_scales' option for multi-sclae icp.
 icp_voxelsize: 0.05
 icp_distance_thr: 0.07
 global_registration_method: ransac
-registration_loop_weight: 0.1
+global_distance_thr: 0.07
+edge_prune_threshold: 0.25
+preference_loop_closure: 0.1
+
+# TSDF integration related parameters.
 integration_mode: color
 voxel_size: 0.0058
 trunc_voxel_multiplier: 8.0
-block_count: 40000
-est_point_count: 6000000
+est_point_count: 4000000
+block_count: 30000
 surface_weight_thr: 3.0
