--- a/cpp/open3d/t/geometry/kernel/CMakeLists.txt
+++ b/cpp/open3d/t/geometry/kernel/CMakeLists.txt
@@ -18,6 +18,7 @@ if (BUILD_CUDA_MODULE)
         ImageCUDA.cu
         NPPImage.cpp
         PointCloudCUDA.cu
+        TriangleMeshCUDA.cu
         TransformCUDA.cu
         VoxelBlockGridCUDA.cu
     )
