--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -221,7 +221,7 @@ jobs:
       fail-fast: false
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9]
+        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -231,6 +231,8 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
+          - is_master: false
+            python_version: 3.6
 
     steps:
       - name: Checkout source code
@@ -323,7 +325,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9]
+        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -333,6 +335,8 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
+          - is_master: false
+            python_version: 3.6
 
     steps:
       - name: Checkout source code
