--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -116,7 +116,7 @@ jobs:
       fail-fast: false
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9]
+        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -126,6 +126,8 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
+          - is_master: false
+            python_version: 3.6
 
     env:
       BUILD_CUDA_MODULE: OFF
@@ -214,7 +216,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9]
+        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -224,6 +226,8 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
+          - is_master: false
+            python_version: 3.6
 
     env:
       OPEN3D_ML_ROOT: ${{ github.workspace }}/Open3D-ML
