--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: 3.7
 
       - name: Config
         # Move build directory to C: https://github.com/actions/virtual-environments/issues/1341
@@ -221,7 +221,7 @@ jobs:
       fail-fast: false
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
+        python_version: [3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -231,8 +231,6 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
-          - is_master: false
-            python_version: 3.6
 
     steps:
       - name: Checkout source code
@@ -325,7 +323,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
+        python_version: [3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -335,8 +333,6 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
-          - is_master: false
-            python_version: 3.6
 
     steps:
       - name: Checkout source code
