--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: 3.7
       - name: Install dependencies
         run: |
           brew install ccache pkg-config
@@ -116,7 +116,7 @@ jobs:
       fail-fast: false
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
+        python_version: [3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -126,8 +126,6 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
-          - is_master: false
-            python_version: 3.6
 
     env:
       BUILD_CUDA_MODULE: OFF
@@ -216,7 +214,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.6, 3.7, 3.8, 3.9, 3.10]
+        python_version: [3.7, 3.8, 3.9, 3.10]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -226,8 +224,6 @@ jobs:
             python_version: 3.8
           - is_master: false
             python_version: 3.9
-          - is_master: false
-            python_version: 3.6
 
     env:
       OPEN3D_ML_ROOT: ${{ github.workspace }}/Open3D-ML
