--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ examples/python/geometry/copy_of_Juneau.jpg
 examples/python/geometry/copy_of_crate.mtl
 examples/python/geometry/copy_of_crate.png
 examples/python/geometry/copy_of_crate.obj
+examples/python/benchmark/test_data/
 
 # doc
 docs/tutorial/**/*.ipynb
