--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -126,12 +126,9 @@ RUN pyenv install $(pyenv install --list | sort -r --version-sort | grep -m1 "^ 
 RUN pyenv local $(pyenv versions | grep ${PYTHON_VERSION})
 RUN which python \
  && python --version \
- && python -m pip install -U \
-    pip=="21.1.1" \
-    wheel=="0.35.1" \
-    setuptools=="50.3.2" \
-    yapf=="0.30.0" \
-    pytest=="7.1.2"
+ && python -m pip install -r python/requirements.txt \
+  -r python/requirements_build.txt \
+  -r python/requirements_test.txt
 
 RUN mkdir build \
  && cd build \
