--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -110,23 +110,21 @@ RUN CMAKE_VER_NUMBERS=$(echo "${CMAKE_VERSION}" | cut -d"-" -f2) \
  && cp -ar ${CMAKE_VERSION} ${HOME}
 ENV PATH=${HOME}/${CMAKE_VERSION}/bin:${PATH}
 
+# Install dependencies before copying the full Open3D directory for better Docker caching
 # Open3D C++ dependencies
-# Done before copying the full Open3D directory for better Docker caching
 COPY ./util/install_deps_ubuntu.sh /root/Open3D/util/
 RUN /root/Open3D/util/install_deps_ubuntu.sh assume-yes \
  && rm -rf /var/lib/apt/lists/*
 
-# Build Python wheel
+# Python and dependencies
 RUN pyenv install $(pyenv install --list | sort -r --version-sort | grep -m1 "^ *${PYTHON_VERSION}\.")
-RUN pyenv local $(pyenv versions | grep ${PYTHON_VERSION})
+RUN pyenv global $(pyenv versions | grep ${PYTHON_VERSION})
+COPY ./python/requirements*.txt /root/Open3D/python/
 RUN which python \
  && python --version \
- && python -m pip install -U \
-    pip=="21.1.1" \
-    wheel=="0.35.1" \
-    setuptools=="50.3.2" \
-    yapf=="0.30.0" \
-    pytest=="6.0.1"
+ && python -m pip install -U -r /root/Open3D/python/requirements.txt \
+  -r /root/Open3D/python/requirements_build.txt \
+  -r /root/Open3D/python/requirements_test.txt
 
 # Open3D repo
 # Always keep /root/Open3D as the WORKDIR
