use old demo, conditional dg2 aot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ else()
 endif()
 option(ENABLE_SYCL_UNIFIED_SHARED_MEMORY "Enable SYCL unified shared memory" OFF)
 option(ENABLE_SYCL_AOT_ADL        "Enable SYCL AoT compilation (ADL GPU)"    OFF)
+option(ENABLE_SYCL_AOT_DG2        "Enable SYCL AoT compilation (DG2 GPU)"    OFF)
 if(BUILD_GUI AND (WIN32 OR UNIX AND NOT LINUX_AARCH64 AND NOT APPLE_AARCH64))
     option(BUILD_WEBRTC           "Build WebRTC visualizer"                  ON )
 else()
