fixed link flags to use system libs

--- a/cpp/tools/CMakeLists.txt
+++ b/cpp/tools/CMakeLists.txt
@@ -11,8 +11,8 @@ macro(open3d_add_tool TOOL_NAME)
     open3d_set_global_properties(${TOOL_NAME})
 endmacro()
 
-open3d_add_tool(ConvertPointCloud)
-open3d_add_tool(GLInfo                  Open3D::3rdparty_opengl Open3D::3rdparty_glfw)
+open3d_add_tool(ConvertPointCloud       Open3D::3rdparty_fmt)
+open3d_add_tool(GLInfo                  Open3D::3rdparty_opengl Open3D::3rdparty_glfw Open3D::3rdparty_fmt)
 open3d_add_tool(ManuallyCropGeometry)
 open3d_add_tool(MergeMesh)
 open3d_add_tool(ViewGeometry)
